# FullPlot

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/hdf5_plotting/: 0generate_plotting_data.py  10multidimensional_slices.py  11show_multiple_figures.py  12light_theme.py  13module_level_api.py  14save_formats.py  1inspect_hdf5.py  2single_trace.py  3multiple_traces.py  4dual_axis.py  5heatmap_2d_dataset.py  6heatmap_stacked_1d.py  7log_axes.py  8log_color_map.py  9multidimensional_line_traces.py  PLOTTING.md
examples/maps/: 1_generate_map.py  2_axis_types.py  3_metadata_and_outputs.py  4_hdf5_layout.py  README.md
examples/traces/: 0_generate_trace_demo_file.py  10_windowed_trace_keeps_full_time.py  1_filter_and_redline.py  1_quick_hdf5_trace_plot.py  2_extract_trace_and_filter.py  3_create_redlines_bluelines.py  4_command_and_sequence_traces.py  5_trace_math_resample_error.py  6_window_scale_offset_derivative.py  7_save_processed_traces.py  8_missing_nan_values_are_omitted.py  8_missing_nan_values_create_gaps.py  9_shared_time_axis_alignment.py  TRACES.md  _trace_demo_data.py
src/fullplot/: __init__.py  cli.py  fullplot.py  hdf5.py  maps.py  themes.py
tests/: test_hdf5.py  test_imports.py  test_maps.py  test_trace.py
