[project]
name = "fullplot"
version = "0.1.0"
description = "A documented HDF5 plotting, trace-processing, and map-generation package for engineering simulation and test data."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Saaketh Ramoju", email = "skramoju@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "hdf5",
    "plotting",
    "engineering",
    "simulation",
    "test-data",
    "map-generation",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/saakethramoju/FullPlot"
Repository = "https://github.com/saakethramoju/FullPlot"
Issues = "https://github.com/saakethramoju/FullPlot/issues"
Changelog = "https://github.com/saakethramoju/FullPlot/blob/main/CHANGELOG.md"
Documentation = "https://github.com/saakethramoju/FullPlot#readme"
PyPI = "https://pypi.org/project/fullplot/"

[project.scripts]
fullplot = "fullplot.cli:main"

[tool.uv.build-backend]
module-name = "fullplot"
source-include = ["CHANGELOG.md", "LICENSE", "PUBLISHING.md", "THIRD_PARTY_LICENSES.md", "examples/**", "tests/**"]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
